<resources>
    <string name="app_name">DigitalFarming</string>
    <!-- Strings related to login -->
    <string name="Feels_like">Feels like</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="blank">"  "</string>
    <string name="fill_profile">Fill Profile</string>
    <string name="name">Name</string>
    <string name="hint_address">address</string>
    <string name="registeringas">"Registering as "</string>
    <string name="farmer">Farmer</string>
    <string name="Customer">Customer</string>
    <string name="stringcontinue">Save</string>
    <string name="add_post">Add Post</string>
    <string name="select_your_city">Select Your city</string>
    <string name="upload_image">Upload Image</string>
    <string name="quantity">Quantity in kg</string>
    <string name="price">Price</string>
    <string name="post">Post</string>
    <string name="type_here_to_search">Type here to search…</string>
    <string name="replace_pictures">Replace Pictures</string>
    <string name="update">Update</string>
    <string name="stock_left">Stock left in(KG)</string>
    <string name="price_per_kg">Price (per KG)</string>
    <string name="place_order">Place Order</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="item_name">Item Name</string>
    <string name="cost">Cost</string>
    <string name="total">Total</string>
    <string name="_00000">000</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="c">°C</string>
    <string name="today_s_weather_in">Today\'s Weather In</string>
    <string name="temperature">Temperature</string>
    <string name="clouds">Clouds</string>
    <string name="Sky">Sky</string>
    <string name="time">Time</string>
    <string name="up_arrow">↑</string>
    <string name="down_arrow">↓</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="bar">|</string>
    <string name="m_s">m/s</string>
    <string name="send">Send</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="Delete">Delete Post</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="_8942">⋮</string>
    <string name="capture">Capture</string>
    <string name="completed">Completed</string>
    <string name="Cancel">Cancel Order</string>
    <string name="qty">qty</string>
    <string name="call_seller">Call Seller</string>
    <string name="address_of_seller">Address of seller</string>
    <string name="address_of_buyer">Address of the Buyer</string>
    <string name="order_details">Order Details</string>
    <string name="call_buyer">Call Buyer</string>
    <string name="report_this_post">Report this Post</string>
    <string name="this_post_has_been_marked_as_wrong">This post has been marked as wrong</string>
    <string name="notifications">Notifications</string>
    <string name="postbutton">Problem! Please Select same images</string>
    <string name="call_me">Call Me</string>
    <string name="buyy">Buy</string>
    <string name="meter_from_you">KM meter from you</string>
    <string name="whatsapp_me">Whatsapp!</string>
    <string name="sold_by">Sold by-</string>
    <string name="stock">Stock</string>
    <string name="price_kg">price/kg</string>
    <string name="pay">Pay</string>
    <string name="select_option">Select Option</string>
    <string name="logout">Logout</string>
    <string name="product_rate_suggestion">PRODUCT RATE SUGGESTION</string>
    <string name="product_name">Product Name</string>
    <string name="average_price">Average Price</string>
    <string name="today_s_price">Today\'s Price</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="brinjal">Brinjal</string>
    <string name="lady_finger">Lady Finger</string>
    <string name="carrot">Carrot</string>
    <string name="filter">Filter</string>
    <string name="my_orders">My Orders</string>
    <string name="your_posts">Your Posts</string>
    <string name="soldto">Sold To-</string>
    <string name="image">Image</string>
    <string name="totalcost">Total Cost=</string>
    <string name="order_received">Order Received</string>
    <string name="order_sent">Order Sent</string>
    <string name="weather_details">Weather Details</string>
    <string name="select_app_language">Select App Language</string>
    <string name="change_language">Change Language</string>
    <string name="ai_chat">AI Chat</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="delete_photos">Delete Photos</string>
    <string name="errorforname">Enter Name of the item</string>
    <string name="fetchingweatherdata">Fetching weather data</string>
    <string name="suggestions">Suggested Price:</string>
    <string name="product_price_greater_than_suggested_price_may_product_get_unsold">*If Product price is greater than suggested price it may product get unsold</string>
    <string name="cancelled">CANCELLED</string>
    <string name="complete">DELIVERED</string>
    <string name="shiped">SHIPPED</string>
    <string name="procesing">PROCESSING</string>
    <string name="loading">Loading...!</string>
    <string name="updatingdata">Updating data, please wait</string>
    <string name="entername">Enter Name</string>
    <string name="nameshould">Name should contain at least 4 characters</string>
    <string name="enteraddress">Enter Address</string>
    <string name="addressshould">Address should be minimum of 10 characters</string>
    <string name="cancelorder">Confirm Order Cancel</string>
    <string name="surecancelorder">Are you sure you want to cancel order</string>
    <string name="yes">Yes</string>
    <string name="selectcity">Please Select City</string>
    <string name="selectrole">Please Select Role</string>
    <string name="errorsnak">Error Occurred while saving information</string>
    <string name="cnfship">Confirm Order shipment</string>
    <string name="successfullyshipped">is Order successfully shipped from you?</string>
    <string name="no">No</string>
    <string name="cnfdelivery">Confirm Order delivered</string>
    <string name="isdelivered">is Order successfully delivered to you?</string>
    <string name="deleit">Delete it</string>
    <string name="cnfdel">Delete!!!</string>
    <string name="askquestionchatbot">Ask Your Questions</string>
    <string name="notavl">No Notification Available</string>
    <string name="ordersuccess">Order Successful!!</string>
    <string name="orderplaced">Your order has been placed successfully!</string>
    <string name="ok">Ok</string>
    <string name="paysuccess">Payment successful?</string>
    <string name="sendotp">Sending OTP</string>
    <string name="rusure">Are you sure?</string>
    <string name="logoutt">Logout?</string>
    <string name="entervaliddata">Enter Valid Data</string>
    <string name="disabled">This post has been disabled</string>
    <string-array name="cities">
        <item>Pune</item>
        <item>Mumbai</item>
    </string-array>


</resources>