<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="5dp"
    android:paddingBottom="220dp"
    >


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >


        <ProgressBar
            android:id="@+id/bs_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="#E64A19"
            />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/bs_image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                />

        </HorizontalScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_photos"
            android:id="@+id/delete_photo_from_img_view"
            android:layout_marginTop="10dp"
            android:background="@color/actionbar"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:visibility="gone"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textSize="18dp"
            android:id="@+id/bs_post_btn_uploadImage"
            android:layout_marginTop="10dp"
            android:background="@color/actionbar"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bs_post_ipl_item_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxStrokeColor="@color/separator"
            app:boxStrokeErrorColor="@color/error"
            app:errorTextColor="@color/error"
            app:hintTextColor="@color/separator"
            app:startIconTint="@color/separator"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bs_post_et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bs_post_ipl_item_count"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                app:boxStrokeColor="@color/separator"
                app:boxStrokeErrorColor="@color/error"
                app:errorTextColor="@color/error"
                app:hintTextColor="@color/separator"
                app:startIconTint="@color/separator"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bs_post_et_item_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="none"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bs_post_ipl_item_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:boxStrokeColor="@color/separator"
                app:boxStrokeErrorColor="@color/error"
                app:errorTextColor="@color/error"
                app:hintTextColor="@color/separator"
                app:startIconTint="@color/separator"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                >
                <TextView
                    android:id="@+id/suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:textSize="10dp"
                    android:visibility="gone"
                    android:textColor="@color/black"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bs_post_et_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="none"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:textSize="12dp"
            android:textColor="@color/error"
            android:text="@string/product_price_greater_than_suggested_price_may_product_get_unsold"
            android:lines="2"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bs_post_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:layout_marginTop="10dp"
            android:background="@drawable/radio_loc_selected"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/normalText"
            />



    </LinearLayout>

</ScrollView>