<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    android:orientation="vertical"
    tools:context=".CheckOut.CheckOutActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:paddingStart="18dp"
            android:paddingTop="38dp"
            android:paddingEnd="10dp"
            android:paddingBottom="18dp"
            android:text="@string/order_details"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="28sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TableLayout
                    android:id="@+id/checkout_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:stretchColumns="0">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_name"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/heading1"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/conOrderColumnWidth"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/quantity"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/heading1"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/conOrderColumnWidth"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/cost"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/heading1"
                            android:textStyle="bold" />

                    </TableRow>

                    <!-- <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
                         android:background="@color/black" />-->


                </TableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="2dp"
                    android:background="@color/separator" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:stretchColumns="0">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:gravity="center_vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/total"
                            android:textSize="@dimen/normalText" />

                        <TextView
                            android:id="@+id/checkout_tv_totalqty"
                            android:layout_width="@dimen/conOrderColumnWidth"
                            android:layout_height="24dp"
                            android:gravity="center"
                            android:text="@string/_00000"
                            android:textSize="@dimen/normalText"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/checkout_tv_totalcost"
                            android:layout_width="@dimen/conOrderColumnWidth"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_00000"
                            android:textSize="@dimen/normalText" />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/addresss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
<RelativeLayout
    android:id="@+id/checkout_btn_pay"
    android:background="@drawable/radio_loc_selected"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="24dp" />
</RelativeLayout>





        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkout_btn_cod"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/radio_loc_selected"
            android:drawablePadding="10dp"
            android:minWidth="100dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/cash_on_delivery"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>


</ScrollView>